--- a/package.json
+++ b/package.json
@@ -19,25 +19,25 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/preset-env": "^7.7.1",
-    "@frctl/fractal": "^1.2.1-beta.1",
-    "@frctl/handlebars": "^1.1.5",
-    "autoprefixer": "^9.7.1",
+    "@babel/preset-env": "^7.16.11",
+    "@frctl/fractal": "^1.5.13",
+    "@frctl/handlebars": "^1.2.14",
+    "autoprefixer": "^10.4.2",
     "babelify": "^10.0.0",
-    "bootstrap": "^4.3.1",
-    "browserify": "^16.5.0",
-    "cssnano": "^4.1.10",
-    "del": "^5.1.0",
+    "bootstrap": "^4.6",
+    "browserify": "^17.0.0",
+    "cssnano": "^5.1.0",
+    "del": "^6.0.0",
     "gulp": "^4.0.2",
-    "gulp-cli": "^2.2.0",
-    "gulp-postcss": "^8.0.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^4.0.2",
-    "gulp-sourcemaps": "^2.6.5",
-    "handlebars": "^4.5.3",
+    "gulp-cli": "^2.3.0",
+    "gulp-postcss": "^9.0.1",
+    "gulp-rename": "^2.0.0",
+    "gulp-sass": "^5.1.0",
+    "gulp-sourcemaps": "^3.0.0",
+    "handlebars": "^4.7.7",
     "handlebars-helper-repeat": "^2.0.0",
     "handlebars-helpers": "^0.10.0",
-    "node-notifier": "^8.0.1",
+    "node-notifier": "^10.0.1",
     "node-sass": "^7.0.0",
     "nswatch": "^0.2.0",
     "vinyl-buffer": "^1.0.1",
