--- a/package.json
+++ b/package.json
@@ -19,26 +19,26 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/preset-env": "^7.7.1",
-    "@frctl/fractal": "^1.2.1-beta.1",
-    "@frctl/handlebars": "^1.1.5",
-    "autoprefixer": "^9.7.1",
+    "@babel/preset-env": "^7.20.2",
+    "@frctl/fractal": "^1.5.15",
+    "@frctl/handlebars": "^1.2.15",
+    "autoprefixer": "^10.4.13",
     "babelify": "^10.0.0",
     "bootstrap": "^4.3.1",
-    "browserify": "^16.5.0",
-    "cssnano": "^4.1.10",
-    "del": "^5.1.0",
+    "browserify": "^17.0.0",
+    "cssnano": "^5.1.15",
+    "del": "^7.0.0",
     "gulp": "^4.0.2",
-    "gulp-cli": "^2.2.0",
-    "gulp-postcss": "^8.0.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^4.0.2",
-    "gulp-sourcemaps": "^2.6.5",
-    "handlebars": "^4.5.3",
+    "gulp-cli": "^2.3.0",
+    "gulp-postcss": "^9.0.1",
+    "gulp-rename": "^2.0.0",
+    "gulp-sass": "^5.1.0",
+    "gulp-sourcemaps": "^3.0.0",
+    "handlebars": "^4.7.7",
     "handlebars-helper-repeat": "^2.0.0",
     "handlebars-helpers": "^0.10.0",
-    "node-notifier": "^6.0.0",
-    "node-sass": "^4.13.0",
+    "node-notifier": "^10.0.1",
+    "node-sass": "^8.0.0",
     "nswatch": "^0.2.0",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0"
